fix course step title overflow (fixes #1868)

--- a/src/app/courses/step-view-courses/courses-step-view.scss
+++ b/src/app/courses/step-view-courses/courses-step-view.scss
@@ -11,7 +11,9 @@
     }
 
   }
-
+  .step-title-header {
+    overflow: auto;
+  }
   planet-resources-viewer * {
     max-width: 100%;
   }
