--- a/src/app/courses/view-courses/courses-view.scss
+++ b/src/app/courses/view-courses/courses-view.scss
@@ -15,8 +15,7 @@
     grid-area: view;
   }
 
-  .course-detail, .course-view {
+  .course-detail, .course-view, .step-title  {
     overflow: auto;
   }
-
 }
